modules/nonprod_nacl/networking/security_groups/alb_sg.tf
resource "aws_security_group" "alb_sg" {
  name        = "${var.env}-${var.region}-alb-sg"
  description = "${var.env}-${var.region}-alb-sg"
  #vpc_id      = "${aws_vpc.vpc.id}"
  vpc_id      = "${var.vpc_id}"

  tags {
    Name = "${var.env}-${var.region}-alb-sg"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 8888
    to_port     = 8888
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
